# bcrypt-rsjs

./: Cargo.toml  README.md  bcrypt-rsjs.d.ts  old_README.md  package-lock.json  package.json
src/: lib.rs
tests/: bench.js
