[package]
name = "bcrypt-rsjs"
version = "0.1.0"
description = "A bcrypt library for Node, written in Rust."
authors = ["Austin Poor"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.13"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
